--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+ {
   "name": "finalapp",
   "version": "1.0.0",
   "private": true,
@@ -20,5 +20,8 @@
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.17",
     "vite": "^5.2.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
